--- a/BT_RealEstate/templates/base.html
+++ b/BT_RealEstate/templates/base.html
@@ -16,7 +16,14 @@
   <title>BT Real Estate</title>
 </head>
 <body>
-  {% block content %} {% endblock %}
+<!-- Top Bar -->
+{% include 'partials/_topbar.html' %}
+<!-- NavBar -->
+{% include 'partials/_navbar.html' %}
+<!-- Main Content -->
+{% block content %} {% endblock %}
+<!-- Footer -->
+{% include 'partials/_footer.html' %}
 
   <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
   <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
