--- a/BT_RealEstate/templates/pages/index.html
+++ b/BT_RealEstate/templates/pages/index.html
@@ -13,7 +13,7 @@
           <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae quas, asperiores eveniet vel nostrum magnam
             voluptatum tempore! Consectetur, id commodi!</p>
           <div class="search">
-            <form action="search.html">
+            <form action="{% url 'search' %}">
               <!-- Form Row 1 -->
               <div class="form-row">
                 <div class="col-md-4 mb-3">
@@ -50,7 +50,7 @@
                 <div class="col-md-6 mb-3">
                   <select name="price" class="form-control" id="type">
                     <option selected="true" disabled="disabled">Max Price (Any)</option>
-                      {% for key,value in price_choices %}
+                      {% for key,value in price_choices.items %}
                         <option value="{{key}}">{{value}}</option>
                       {% endfor %}
                   </select>
