--- a/BT_RealEstate/templates/accounts/dashboard.html
+++ b/BT_RealEstate/templates/accounts/dashboard.html
@@ -25,6 +25,9 @@
       </nav>
     </div>
   </section>
+  
+  <!-- Alerts -->
+  {% include 'partials/_alerts.html' %}
 
   <section id="dashboard" class="py-4">
     <div class="container">
