--- a/BT_RealEstate/templates/partials/_navbar.html
+++ b/BT_RealEstate/templates/partials/_navbar.html
@@ -42,18 +42,25 @@
 
         <ul class="navbar-nav ml-auto">
           {% if user.is_authenticated %}
-            <form>
-              <li
-                {% if 'dashboard' in request.path %}
-                  class="nav-item active mr-3"
-                {% else %}
-                  class="nav-item mr-3"
-                {% endif %}
-              >
-                <a class="nav-link" href="{% url 'dashboard' %}"
-                >Dashboard</a>
-              </li>
-            </form>
+            <li
+              {% if 'dashboard' in request.path %}
+                class="nav-item active mr-3"
+              {% else %}
+                class="nav-item mr-3"
+              {% endif %}
+            >
+              <a class="nav-link" href="{% url 'dashboard' %}"
+              >Wellcome {{user.username}} (Dashboard)</a>
+            </li>
+            <li class="nav-item mr-3">
+              <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}" >
+                <i class="fas fa-sign-out-alt">Logout</i>
+              </a>
+              <form id="logout" action="{% url 'logout' %}" method="POST">
+                {% csrf_token %}
+                <input type="hidden">
+              </form>
+            </li>
           {% else %}
             <li
               {% if 'register' in request.path %}
